Refine Ant Get authentication coverage test